Bug 1424978 MIPS: Fix some function implement. r=lth