js/src/jit/mips64/Trampoline-mips64.cpp
@@ -65,8 +65,6 @@ struct EnterJITRegs
 static void
 GenerateReturn(MacroAssembler& masm, int returnCode)
 {
-    MOZ_ASSERT(masm.framePushed() == sizeof(EnterJITRegs));
-
     if (isLoongson()) {
         // Restore non-volatile registers
         masm.as_ld(s0, StackPointer, offsetof(EnterJITRegs, s0));
